[package]
name = "mycelium-std-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audited FFI/syscall floor for the Mycelium standard library (RFC-0016 §8-Q6, LR-9)"
publish = false

[dependencies]
# No mycelium workspace dependencies — std-sys sits below the std layer.
# Uses only Rust stdlib (std::*).

[dev-dependencies]
# None required — tests use only std

[lints]
workspace = true

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-std-sys"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
